# aidos

./: .gitignore  LICENSE  README.md  pyproject.toml
aidos/: __main__.py  agent.py  cli.py  report.py  tools.py
aidos/tools/: __init__.py  _base.py  analysis.py  app.py  declarations.py  flood_l4.py  flood_l7.py  meta.py  recon.py  slow.py  state.py
scripts/: install_windows_tools.ps1  lab_target.py  run_legal_full_test.ps1
